css/default.css
body {
  font-family: HelveticaNeue,Gill Sans,Helvetica,sans-serif;
  background-color: #FAFAFA;
  margin: 0px;
}

.circular-photo {
  width: 70px;
  height: 70px;
  position: relative;
  overflow: hidden;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  border-radius: 50%;
}

.circular-photo img {
  display: inline;
  margin: 0 auto;
  height: 100%;
  width: auto;
}

/* Navbar */
.navbar {
  height: 55px;
  background-color: #ffffff;
  border: solid 1px #edeeee;
  margin-bottom: 20px;
  width: 100%;
}

.navbar .search-bar {
  width: 420px;
  height: 28px;
  border-radius: 15px;
  background-color: #fafafa;
  border: solid 1px #edeeee;
}

/* Group */
.group {
  text-align: center;
  font-size: 16px;
  color: #77797b;
}

.group .photos > * {
  display: inline-block;
}

.group .add {
  background-color: white;
  border: solid 2px #c1c2c2;
  width: 70px;
  height: 70px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  border-radius: 50%;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
}

/* from https://jsfiddle.net/psullivan6/0eL3jezk/ */
.group .plus {
  position: relative;
  width: 20px;
  height: 20px;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
}

.group .plus:before,
.group .plus:after {
  content: "";
  position: absolute;
  background-color: #c1c2c2;
}

/* Vertical line */
.group .plus:before{
  top: 0;
  left: 50%;
  width: 2px;
  height: 100%;
  margin-left: -1px;
}

/* horizontal line */
.group .plus:after{
  top: 50%;
  left: 0;
  width: 100%;
  height: 2px;
  margin-top: -1px;
}

.group .group-name {
  margin-top: 5px;
}


/* Lolomo */
.lolomo {
  margin-left: 55px;
}

.lolomo .lomo {
  margin-bottom: 15px;
}

.lolomo .movies {
  overflow-x: scroll;
  overflow-y: hidden;
  white-space: nowrap;
  padding-top: 3px;
  padding-bottom: 5px;
  margin-left: -55px;
  padding-left: 55px;
}

.lolomo .title {
  color: #818488;
  font-size: 25px;
  margin: 5px 0px;
}

.lolomo .movie {
  width: 166.7px;
	height: 250px;
	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.35);
  display: inline-block;
  margin-right: 10px;
}

.lolomo .movie img {
  width: 100%;
  height:100%;
}

